[tool.poetry]
name = "parser-information"
version = "0.1.0"
description = ""
authors = ["volkov_ts <volkow.timofey@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
