[tool.poetry]
name = "press_index"
version = "0.1.0"
description = ""
authors = ["volkov_ts <volkow.timofey@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
chardet = "^5.2.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
django = "^5.1"
dj-database-url = "^2.2.0"
aiohttp = "^3.10.5"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
